feat: initial compile without Minecraft dependency, missing some shims