@@ -4,17 +4,18 @@ import ca.spottedleaf.dataconverter.minecraft.MCVersions;
 import ca.spottedleaf.dataconverter.minecraft.converters.blockname.ConverterAbstractBlockRename;
 import ca.spottedleaf.dataconverter.minecraft.converters.itemname.ConverterAbstractItemRename;
 import ca.spottedleaf.dataconverter.minecraft.converters.poi.ConverterAbstractPOIRename;
-import com.google.common.collect.ImmutableMap;
+
 import java.util.Map;
 
 public final class V2209 {
 
     protected static final int VERSION = MCVersions.V19W40A + 1;
 
-    private V2209() {}
+    private V2209() {
+    }
 
     public static void register() {
-        final Map<String, String> renamedIds = ImmutableMap.of(
+        final Map<String, String> renamedIds = Map.of(
                 "minecraft:bee_hive", "minecraft:beehive"
         );
 
